--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
   Start editing to see some magic happen :)
 </p>
 
-<app-primos></app-primos>
+<!-- <app-primos></app-primos> -->
+
+<app-brujula></app-brujula>
