--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,6 @@
 
 <!-- <app-primos></app-primos> -->
 
-<app-brujula></app-brujula>
+<!-- <app-brujula></app-brujula> -->
+
+<app-pascalize-words></app-pascalize-words>
