--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 
 <!-- <app-brujula></app-brujula> -->
 
-<app-pascalize-words></app-pascalize-words>
+<!-- <app-pascalize-words></app-pascalize-words> -->
+
+<app-fizzbuzz></app-fizzbuzz>
